# notus-label-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  alembic.ini  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routes/: analyze.py  batches.py  products.py
app/core/: config.py  logging.py
app/models/: domain.py  schemas.py
app/repositories/: batch_repo.py  product_repo.py
app/services/: camera_service.py  image_preprocessor.py  label_parser.py  ocr_service.py
app/utils/: date_normalizer.py  image_utils.py
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: e134c59ab525_initial_schema.py
scripts/: benchmark.py  seed_products.py
static/: index.html
tests/: conftest.py
tests/fixtures/: ground_truth.json
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_date_normalizer.py  test_image_preprocessor.py  test_label_parser.py
