[tool.poetry]
name = "notus-label-agent"
version = "0.1.0"
description = "Agent IA extraction LOT + date expiration etiquettes pharmaceutiques"
authors = ["Ibrahim Stouri"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "2.0.30"}
alembic = "1.13.1"
asyncpg = "0.29.0"
psycopg2-binary = "2.9.9"
pydantic-settings = "2.2.1"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
opencv-python = ">=4.5.0"
Pillow = "10.3.0"
numpy = "1.26.4"
pytesseract = "0.3.10"
paddleocr = ">=2.7.0,<2.8.0"
paddlepaddle = ">=2.4.0,<3.0.0"
loguru = "0.7.2"
aiofiles = "23.2.1"
redis = {extras = ["hiredis"], version = "5.0.4"}
prometheus-fastapi-instrumentator = "6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.0"
pytest-asyncio = "0.23.6"
pytest-cov = "5.0.0"
httpx = "0.27.0"
ruff = "0.4.4"
mypy = "1.10.0"
pre-commit = "3.7.1"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: tests lents (integration sur images)",
    "integration: tests bout-en-bout",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = ["pragma: no cover", "if __name__"]
